--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,27 @@
+body {
+  font-size: 20px;
+}
 h1,h2,h4 {
 	text-align: center;
   font-weight: bold;
 }
 
 .container {
-	width: 1150px;
+  padding: 50px;
+	width: 1100px;
 	margin: auto;
+}
+
+.home {
+  display: inline;
+  margin: auto;
+}
+.case{
+  /* font-size: 20px; */
+}
+
+.choice {
+  text-align: center;
 }
 .button{
   margin:5px;
